parsers/css/CssParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .CssListener import CssListener
else:
    from CssListener import CssListener


class CssParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'*'", u"'|'", u"'.'", u"'['", u"'='", 
                     u"']'", u"':'", u"')'", u"'-'", u"<INVALID>", u"'~='", 
                     u"'|='", u"'^='", u"'$='", u"'*='" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"SPACE", u"INCLUDES", 
                      u"DASHMATCH", u"PREFIXMATCH", u"SUFFIXMATCH", u"SUBSTRINGMATCH", 
                      u"IDENTIFIER", u"STRING", u"FUNCTION", u"NUMBER", 
                      u"HASH", u"PLUS", u"GREATER", u"COMMA", u"TILDE", 
                      u"NOT", u"ATKEYWORD", u"PERCENTAGE", u"DIMENSION" ]

    RULE_selectors_group = 0
    RULE_selector = 1
    RULE_combinator = 2
    RULE_simple_selector_sequence = 3
    RULE_type_selector = 4
    RULE_namespace_prefix = 5
    RULE_element_name = 6
    RULE_universal = 7
    RULE_class_ = 8
    RULE_attribute = 9
    RULE_pseudo = 10
    RULE_functional_pseudo = 11
    RULE_expression = 12
    RULE_negation = 13
    RULE_negation_argument = 14

    ruleNames =  [ u"selectors_group", u"selector", u"combinator", u"simple_selector_sequence", 
                   u"type_selector", u"namespace_prefix", u"element_name", 
                   u"universal", u"class_", u"attribute", u"pseudo", u"functional_pseudo", 
                   u"expression", u"negation", u"negation_argument" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    SPACE=10
    INCLUDES=11
    DASHMATCH=12
    PREFIXMATCH=13
    SUFFIXMATCH=14
    SUBSTRINGMATCH=15
    IDENTIFIER=16
    STRING=17
    FUNCTION=18
    NUMBER=19
    HASH=20
    PLUS=21
    GREATER=22
    COMMA=23
    TILDE=24
    NOT=25
    ATKEYWORD=26
    PERCENTAGE=27
    DIMENSION=28

    def __init__(self, input):
        super(CssParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Selectors_groupContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.Selectors_groupContext, self).__init__(parent, invokingState)
            self.parser = parser

        def selector(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CssParser.SelectorContext)
            else:
                return self.getTypedRuleContext(CssParser.SelectorContext,i)


        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(CssParser.COMMA)
            else:
                return self.getToken(CssParser.COMMA, i)

        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(CssParser.SPACE)
            else:
                return self.getToken(CssParser.SPACE, i)

        def getRuleIndex(self):
            return CssParser.RULE_selectors_group

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterSelectors_group(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitSelectors_group(self)




    def selectors_group(self):

        localctx = CssParser.Selectors_groupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_selectors_group)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.selector()
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CssParser.COMMA:
                self.state = 31
                self.match(CssParser.COMMA)
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CssParser.SPACE:
                    self.state = 32
                    self.match(CssParser.SPACE)
                    self.state = 37
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 38
                self.selector()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.SelectorContext, self).__init__(parent, invokingState)
            self.parser = parser

        def simple_selector_sequence(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CssParser.Simple_selector_sequenceContext)
            else:
                return self.getTypedRuleContext(CssParser.Simple_selector_sequenceContext,i)


        def combinator(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CssParser.CombinatorContext)
            else:
                return self.getTypedRuleContext(CssParser.CombinatorContext,i)


        def getRuleIndex(self):
            return CssParser.RULE_selector

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterSelector(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitSelector(self)




    def selector(self):

        localctx = CssParser.SelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_selector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.simple_selector_sequence()
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CssParser.SPACE) | (1 << CssParser.PLUS) | (1 << CssParser.GREATER) | (1 << CssParser.TILDE))) != 0):
                self.state = 45
                self.combinator()
                self.state = 46
                self.simple_selector_sequence()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CombinatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.CombinatorContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(CssParser.PLUS, 0)

        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(CssParser.SPACE)
            else:
                return self.getToken(CssParser.SPACE, i)

        def GREATER(self):
            return self.getToken(CssParser.GREATER, 0)

        def TILDE(self):
            return self.getToken(CssParser.TILDE, 0)

        def getRuleIndex(self):
            return CssParser.RULE_combinator

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterCombinator(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitCombinator(self)




    def combinator(self):

        localctx = CssParser.CombinatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_combinator)
        self._la = 0 # Token type
        try:
            self.state = 79
            token = self._input.LA(1)
            if token in [CssParser.PLUS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.match(CssParser.PLUS)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CssParser.SPACE:
                    self.state = 54
                    self.match(CssParser.SPACE)
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            elif token in [CssParser.GREATER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(CssParser.GREATER)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CssParser.SPACE:
                    self.state = 61
                    self.match(CssParser.SPACE)
                    self.state = 66
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            elif token in [CssParser.TILDE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.match(CssParser.TILDE)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CssParser.SPACE:
                    self.state = 68
                    self.match(CssParser.SPACE)
                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            elif token in [CssParser.SPACE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 74
                    self.match(CssParser.SPACE)
                    self.state = 77 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==CssParser.SPACE):
                        break


            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Simple_selector_sequenceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.Simple_selector_sequenceContext, self).__init__(parent, invokingState)
            self.parser = parser

        def type_selector(self):
            return self.getTypedRuleContext(CssParser.Type_selectorContext,0)


        def universal(self):
            return self.getTypedRuleContext(CssParser.UniversalContext,0)


        def HASH(self, i=None):
            if i is None:
                return self.getTokens(CssParser.HASH)
            else:
                return self.getToken(CssParser.HASH, i)

        def class_(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CssParser.Class_Context)
            else:
                return self.getTypedRuleContext(CssParser.Class_Context,i)


        def attribute(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CssParser.AttributeContext)
            else:
                return self.getTypedRuleContext(CssParser.AttributeContext,i)


        def pseudo(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CssParser.PseudoContext)
            else:
                return self.getTypedRuleContext(CssParser.PseudoContext,i)


        def negation(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CssParser.NegationContext)
            else:
                return self.getTypedRuleContext(CssParser.NegationContext,i)


        def getRuleIndex(self):
            return CssParser.RULE_simple_selector_sequence

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterSimple_selector_sequence(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitSimple_selector_sequence(self)




    def simple_selector_sequence(self):

        localctx = CssParser.Simple_selector_sequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simple_selector_sequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 81
                self.type_selector()
                pass

            elif la_ == 2:
                self.state = 82
                self.universal()
                pass


            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CssParser.T__2) | (1 << CssParser.T__3) | (1 << CssParser.T__6) | (1 << CssParser.HASH) | (1 << CssParser.NOT))) != 0):
                self.state = 90
                token = self._input.LA(1)
                if token in [CssParser.HASH]:
                    self.state = 85
                    self.match(CssParser.HASH)

                elif token in [CssParser.T__2]:
                    self.state = 86
                    self.class_()

                elif token in [CssParser.T__3]:
                    self.state = 87
                    self.attribute()

                elif token in [CssParser.T__6]:
                    self.state = 88
                    self.pseudo()

                elif token in [CssParser.NOT]:
                    self.state = 89
                    self.negation()

                else:
                    raise NoViableAltException(self)

                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_selectorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.Type_selectorContext, self).__init__(parent, invokingState)
            self.parser = parser

        def element_name(self):
            return self.getTypedRuleContext(CssParser.Element_nameContext,0)


        def namespace_prefix(self):
            return self.getTypedRuleContext(CssParser.Namespace_prefixContext,0)


        def getRuleIndex(self):
            return CssParser.RULE_type_selector

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterType_selector(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitType_selector(self)




    def type_selector(self):

        localctx = CssParser.Type_selectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_selector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 95
                self.namespace_prefix()


            self.state = 98
            self.element_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Namespace_prefixContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.Namespace_prefixContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CssParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return CssParser.RULE_namespace_prefix

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterNamespace_prefix(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitNamespace_prefix(self)




    def namespace_prefix(self):

        localctx = CssParser.Namespace_prefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_namespace_prefix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            _la = self._input.LA(1)
            if _la==CssParser.T__0 or _la==CssParser.IDENTIFIER:
                self.state = 100
                _la = self._input.LA(1)
                if not(_la==CssParser.T__0 or _la==CssParser.IDENTIFIER):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()


            self.state = 103
            self.match(CssParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Element_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.Element_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CssParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return CssParser.RULE_element_name

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterElement_name(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitElement_name(self)




    def element_name(self):

        localctx = CssParser.Element_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_element_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(CssParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UniversalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.UniversalContext, self).__init__(parent, invokingState)
            self.parser = parser

        def namespace_prefix(self):
            return self.getTypedRuleContext(CssParser.Namespace_prefixContext,0)


        def getRuleIndex(self):
            return CssParser.RULE_universal

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterUniversal(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitUniversal(self)




    def universal(self):

        localctx = CssParser.UniversalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_universal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 107
                self.namespace_prefix()


            self.state = 110
            self.match(CssParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_Context(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.Class_Context, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CssParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return CssParser.RULE_class_

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterClass_(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitClass_(self)




    def class_(self):

        localctx = CssParser.Class_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_class_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(CssParser.T__2)
            self.state = 113
            self.match(CssParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.AttributeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i=None):
            if i is None:
                return self.getTokens(CssParser.IDENTIFIER)
            else:
                return self.getToken(CssParser.IDENTIFIER, i)

        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(CssParser.SPACE)
            else:
                return self.getToken(CssParser.SPACE, i)

        def namespace_prefix(self):
            return self.getTypedRuleContext(CssParser.Namespace_prefixContext,0)


        def PREFIXMATCH(self):
            return self.getToken(CssParser.PREFIXMATCH, 0)

        def SUFFIXMATCH(self):
            return self.getToken(CssParser.SUFFIXMATCH, 0)

        def SUBSTRINGMATCH(self):
            return self.getToken(CssParser.SUBSTRINGMATCH, 0)

        def INCLUDES(self):
            return self.getToken(CssParser.INCLUDES, 0)

        def DASHMATCH(self):
            return self.getToken(CssParser.DASHMATCH, 0)

        def STRING(self):
            return self.getToken(CssParser.STRING, 0)

        def getRuleIndex(self):
            return CssParser.RULE_attribute

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterAttribute(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = CssParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(CssParser.T__3)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CssParser.SPACE:
                self.state = 116
                self.match(CssParser.SPACE)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 122
                self.namespace_prefix()


            self.state = 125
            self.match(CssParser.IDENTIFIER)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CssParser.SPACE:
                self.state = 126
                self.match(CssParser.SPACE)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CssParser.T__4) | (1 << CssParser.INCLUDES) | (1 << CssParser.DASHMATCH) | (1 << CssParser.PREFIXMATCH) | (1 << CssParser.SUFFIXMATCH) | (1 << CssParser.SUBSTRINGMATCH))) != 0):
                self.state = 132
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CssParser.T__4) | (1 << CssParser.INCLUDES) | (1 << CssParser.DASHMATCH) | (1 << CssParser.PREFIXMATCH) | (1 << CssParser.SUFFIXMATCH) | (1 << CssParser.SUBSTRINGMATCH))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CssParser.SPACE:
                    self.state = 133
                    self.match(CssParser.SPACE)
                    self.state = 138
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 139
                _la = self._input.LA(1)
                if not(_la==CssParser.IDENTIFIER or _la==CssParser.STRING):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CssParser.SPACE:
                    self.state = 140
                    self.match(CssParser.SPACE)
                    self.state = 145
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 148
            self.match(CssParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PseudoContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.PseudoContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CssParser.IDENTIFIER, 0)

        def functional_pseudo(self):
            return self.getTypedRuleContext(CssParser.Functional_pseudoContext,0)


        def getRuleIndex(self):
            return CssParser.RULE_pseudo

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterPseudo(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitPseudo(self)




    def pseudo(self):

        localctx = CssParser.PseudoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pseudo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(CssParser.T__6)
            self.state = 152
            _la = self._input.LA(1)
            if _la==CssParser.T__6:
                self.state = 151
                self.match(CssParser.T__6)


            self.state = 156
            token = self._input.LA(1)
            if token in [CssParser.IDENTIFIER]:
                self.state = 154
                self.match(CssParser.IDENTIFIER)

            elif token in [CssParser.FUNCTION]:
                self.state = 155
                self.functional_pseudo()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Functional_pseudoContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.Functional_pseudoContext, self).__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CssParser.FUNCTION, 0)

        def expression(self):
            return self.getTypedRuleContext(CssParser.ExpressionContext,0)


        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(CssParser.SPACE)
            else:
                return self.getToken(CssParser.SPACE, i)

        def getRuleIndex(self):
            return CssParser.RULE_functional_pseudo

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterFunctional_pseudo(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitFunctional_pseudo(self)




    def functional_pseudo(self):

        localctx = CssParser.Functional_pseudoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functional_pseudo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(CssParser.FUNCTION)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CssParser.SPACE:
                self.state = 159
                self.match(CssParser.SPACE)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 165
            self.expression()
            self.state = 166
            self.match(CssParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self, i=None):
            if i is None:
                return self.getTokens(CssParser.PLUS)
            else:
                return self.getToken(CssParser.PLUS, i)

        def DIMENSION(self, i=None):
            if i is None:
                return self.getTokens(CssParser.DIMENSION)
            else:
                return self.getToken(CssParser.DIMENSION, i)

        def NUMBER(self, i=None):
            if i is None:
                return self.getTokens(CssParser.NUMBER)
            else:
                return self.getToken(CssParser.NUMBER, i)

        def STRING(self, i=None):
            if i is None:
                return self.getTokens(CssParser.STRING)
            else:
                return self.getToken(CssParser.STRING, i)

        def IDENTIFIER(self, i=None):
            if i is None:
                return self.getTokens(CssParser.IDENTIFIER)
            else:
                return self.getToken(CssParser.IDENTIFIER, i)

        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(CssParser.SPACE)
            else:
                return self.getToken(CssParser.SPACE, i)

        def getRuleIndex(self):
            return CssParser.RULE_expression

        def enterRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.enterExpression(self)

        def exitRule(self, listener):
            if isinstance( listener, CssListener ):
                listener.exitExpression(self)




    def expression(self):

        localctx = CssParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 168
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CssParser.T__8) | (1 << CssParser.IDENTIFIER) | (1 << CssParser.STRING) | (1 << CssParser.NUMBER) | (1 << CssParser.PLUS) | (1 << CssParser.DIMENSION))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CssParser.SPACE:
                    self.state = 169
                    self.match(CssParser.SPACE)
                    self.state = 174
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 177 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CssParser.T__8) | (1 << CssParser.IDENTIFIER) | (1 << CssParser.STRING) | (1 << CssParser.NUMBER) | (1 << CssParser.PLUS) | (1 << CssParser.DIMENSION))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NegationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CssParser.NegationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(CssParser.NOT, 0)

        def negation_argument(self):
            return self.getTypedRuleContext(CssParser.Negation_argumentContext,0)

